--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -214,16 +214,13 @@
         </div>
 
         <h3>Crawling</h3>
-            <div style="width:400px; height:400px;">
-                <% @images.each do |img| %>
-                    <%= image_tag img %>
-                    <% @nodes.each do |node| %>
-                        <%= link_to do %>
-                            <%= p node.text %>
-                        <% end %>     
-                    <% end %>                    
-                <% end %>
-            </div>
+        <div style="width:400px; height:400px;">
+            <% @img.each do |img| %>
+                <!--<%= p @title %>-->
+                <%= image_tag img %>
+            <% end %>
+        </div>
+
         <div class="col-sm-3">
             <%= render 'shared/timeline'%>
         </div>
