--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -10,13 +10,110 @@
 .row .col.s4 {
     width: 31.8%;
 }
+
+
 </style>
 
-<header>
+<!-- <header> -->
     <%= render 'shared/nav' %>
-</header>
+<!-- </header> -->
 
 <main>
+    <div class="container">
+        <div class="section">
+        <div class="row">
+            <div class="col s12">
+                <div class="section">
+                    <div class="col s12">
+                        <span class="title">Recently Added</span>
+                    </div>
+                    <div class="col s12 m6 l4">
+
+                    <div class="card medium hoverable">
+                        <a href="http://anichil.com/archives/1070252769.html" target="_blank" class="test">
+                            <div class="card-image waves-effect waves-block waves-light">
+                                <%= image_tag 'article/img/test1.jpg', :alt=>'画像13', :class=>'activator' %>
+                                <div class="img-top-triangle"></div>
+                            </div>
+                            <div class="card-content">
+                                <p>独身男性が1人でプリキュア映画見に行くのってキモい？</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="http://anichil.com/" target="_blank">あにちる速報</a>
+                            </div>
+                        </a>
+                    </div>
+
+                    </div>
+                    <div class="col s12 m6 l4">
+                        <div class="card medium hoverable">
+                        <a href="http://anichil.com/archives/1070252769.html" target="_blank" class="test">
+                            <div class="card-image waves-effect waves-block waves-light">
+                                <%= image_tag 'article/img/test1.jpg', :alt=>'画像13', :class=>'activator' %>
+                                <div class="img-top-triangle"></div>
+                            </div>
+                            <div class="card-content">
+                                <p>独身男性が1人でプリキュア映画見に行くのってキモい？</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="http://anichil.com/" target="_blank">あにちる速報</a>
+                            </div>
+                        </a>
+                    </div>
+                    </div>
+                    <div class="col s12 m6 l4">
+                        <div class="card medium hoverable">
+                        <a href="http://anichil.com/archives/1070252769.html" target="_blank" class="test">
+                            <div class="card-image waves-effect waves-block waves-light">
+                                <%= image_tag 'article/img/test1.jpg', :alt=>'画像13', :class=>'activator' %>
+                                <div class="img-top-triangle"></div>
+                            </div>
+                            <div class="card-content">
+                                <p>独身男性が1人でプリキュア映画見に行くのってキモい？</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="http://anichil.com/" target="_blank">あにちる速報</a>
+                            </div>
+                        </a>
+                    </div>
+                    </div>
+                    <div class="col s12 m6 l4">
+                        <div class="card medium hoverable">
+                        <a href="http://anichil.com/archives/1070252769.html" target="_blank" class="test">
+                            <div class="card-image waves-effect waves-block waves-light">
+                                <%= image_tag 'article/img/test1.jpg', :alt=>'画像13', :class=>'activator' %>
+                                <div class="img-top-triangle"></div>
+                            </div>
+                            <div class="card-content">
+                                <p>独身男性が1人でプリキュア映画見に行くのってキモい？</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="http://anichil.com/" target="_blank">あにちる速報</a>
+                            </div>
+                        </a>
+                    </div>
+                    </div>
+                    <div class="col s12 m6 l4">
+                        <div class="card medium hoverable">
+                        <a href="http://anichil.com/archives/1070252769.html" target="_blank" class="test">
+                            <div class="card-image waves-effect waves-block waves-light">
+                                <%= image_tag 'article/img/test1.jpg', :alt=>'画像13', :class=>'activator' %>
+                                <div class="img-top-triangle"></div>
+                            </div>
+                            <div class="card-content">
+                                <p>独身男性が1人でプリキュア映画見に行くのってキモい？</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="http://anichil.com/" target="_blank">あにちる速報</a>
+                            </div>
+                        </a>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
     <div class="row col-sm-12">
         <div class="col-sm-9" style="float:left;">
             <div class="card-margin col s4 col-sm-6" style="margin: 0 15px; float:left;">
