--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="header-wrapper white">
+<!-- <div class="header-wrapper white">
     <nav class="header primary-nav">
         <div class="primary-nav-inner">
             <div class="header-logo">
@@ -26,7 +26,6 @@
                                         <% end %>
                                     </div>
                                 </div>
-                                <!-- <li><a href="#"><i class="material-icons nav-icon nav-b">whatshot<div class="nav-discription">人気記事</div></i></a></li> -->
                                 <div class="nav-items">
                                     <div class="nav-items-link">
                                         <%= link_to purecolle_about_path do %>
@@ -49,6 +48,15 @@
                     </div>
                 </div>
                 <div class="header-logo-img"><a href="#"><%= image_tag 'title_logo.png', :alt => 'プリコレ！', :class => "title_img" %></a></div>
+            </div>
+        </div>
+    </nav>
+</div>
+-->
+<div class="navbar-fixed">
+    <nav class="white" role="navigation">
+        <div class="container">
+            <div class="nav-wrapper">
             </div>
         </div>
     </nav>
