--- a/app/assets/stylesheets/purecolle.scss
+++ b/app/assets/stylesheets/purecolle.scss
@@ -1,569 +1,6 @@
-@charset "utf-8";
+@charset "UTF-8";
 
-/* @media query */
-@media (max-width: 1320px) {
-    .hidden_tl {
-        display: none;
-    }
-}
-@media (min-width: 1160px) {
-    .col-sm-8 {
-        width: 80%;
-    }
-}
-@media (min-width: 768px) and (max-width: 1160px) {
-    .col-sm-12 {
-        width: 100%;
-    }
-}
-@media (max-width: 1160px) {
-    .header {
-        width: 100%;
-    }
-    .primary-nav-inner {
-        width: 100%
-    }
-}
-/* mobile */
-@media (max-width: 768px) {
-    .col-sm-6 {
-        width: 45% !important;
-    }
-    .col-sm-12 {
-        width: 100%;
-    }
-    .col-sm-9 {
-        width: 100% !important;
-    }
-    .card {
-        max-width: 323px;
-        min-height: 323px !important;
-    }
-    .hidden_scroll {
-        display: none !important;
-    }
-}
-
-body {font-family: 'ãƒ¡ã‚¤ãƒªã‚ª', 'Meiryo', 'Hiragino Kaku Gothic Pro', 'ãƒ’ãƒ©ã‚®ãƒŽè§’ã‚´ Pro W3', 'Osaka', 'ï¼­ï¼³ ï¼°ã‚´ã‚·ãƒƒã‚¯', sans-serif;letter-spacing: .15rem;}
-nav ul a,nav .brand-logo {color: #444;}
-p {line-height: 2rem;font-size: 1.1rem;}
-.button-collapse {color: #26a69a;}
-.mes {height: auto;min-height: 380px;}
-.mes .section {top: 20%;}
-.info {height: auto;min-height: 500px;} 
-.parallax-container .section {width: 100%;}
-.clearfix {zoom: 1; }
-.clear {clear: both;}
-.info h1 { font-size: 3rem;line-height: 2.8rem;padding: 12% 0;}
-.info h2 { font-size: 1rem;line-height: 1.5rem;}
-.deco {border-bottom: 2px #26a69a dotted;padding: 4%;}
-h6 { font-size: 1.3rem;padding: 5%;line-height: 2rem;}
-.padding {padding: 5%;}
-.m-padding {padding: 5% 0;}
-.s-padding {padding: 1%;}
-nav ul#nav-mobile li:first-child a {overflow: auto;}
-.infoIcon {float:left; height: 175px; width: 175px; line-height: 175px; max-width: 100%; background: #eceff1; border-radius: 50%; -o-border-radius: 50%; -moz-border-radius: 50%; -webkit-border-radius: 50%; display: block; color: #fff; text-align: center; vertical-align: middle; position: relative; margin: 0 10px 50px;}
-.up-btn { width: 50px; height: 50px; border-radius: 50%; -moz-border-radius: 50%; -webkit-border-radius: 50%; -o-border-radius: 50%; background: rgba(61, 201, 179, 0.5); display: block; margin: 0 auto; color: #fff; font-size: 18px; line-height: 46px; text-align: center; top: -26px; left: 0; right: 0; margin-left: auto; margin-right: auto; }
-.up-btn:hover, up-btn:focus { color: #fff; background: rgba(61, 201, 179, 1); }
-.icon-block {padding: 0 15px;}
-footer.page-footer {margin: 0;}
-@media only screen and (max-width : 992px) {
-.parallax-container .section {position: absolute;top: 30%;}
-.mes {min-height: 150px;}
-.mes .section {position: absolute;top: 25%;}
-.info h1 { padding: 5%;}
-#index-banner .section {top: 10%;}
-.parallax-container h1 {font-size: 2.2rem;}
-.top img { -ms-interpolation-mode: bicubic; height: 500px; width /***/:auto; /*IE8*/}
-}
-
-/* nav */
-.header-wrapper {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 100;
-}
-.header {
-    margin: 0 auto;
-    border-radius: 0;
-    padding: 15px 10px;
-    height: 64px;
-    border: none;
-    background-color: #fff;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-}
-.primary-nav-inner {
-    border-bottom: #f3f3f3;
-    margin: 0 auto;
-    padding: 0;
-    position: relative;
-}
-.header-logo {
-    display: inline-block;
-    z-index: 1;
-    float: left;
-    height: 34px;
-    left: 0;
-    margin: 0;
-}
-.pull-left {
-    float: left !important;
-}
-.header-logo-img {
-    display: inline-block;
-    float: left;
-    height: 24px;
-    margin: 5px 16px 0;
-}
-.header-wrapper .header-logo img {
-    display: block;
-    margin: 0;
-    max-height: 31px;
-    padding: 0;
-}
-.header-wrapper .header-logo {
-    display: inline-block;
-    float: left;
-    height: 35px;
-    margin: -5px 15px 0;
-}
-.header-wrapper .pull-left i {
-    color: #333;
-    font-size: 24px;
-    line-height: 30px;
-    text-align: center;
-}
-.material-icons {
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px;
-    display: inline-block;
-    width: 1em;
-    height: 1em;
-    line-height: 1;
-    text-transform: none;
-}
-.nav-discription img {
-    max-height: 52px !important;
-    margin-left: -18px !important;
-}
-img {
-    vertical-align: middle;
-    border: 0;
-}
-[type="checkbox"] + label {
-    padding-left: 0;
-}
-.nav-section .nav-items {
-    margin: 14px 0;
-}
-.nav-section .nav-items .nav-items-link .nav-discription {
-    margin-top: -31px;
-}
-
-.card {
-    max-width: 530px !important;
-    min-width: 140px;
-    min-height: 390px !important;
-    width: 100% !important;
-}
-
-/* twitter_timeline */
-.shadow_tl {
-    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-}
-.sizing_tl {
-    position: fixed;
-    margin-top: 8px !important; 
-}
-/* main */
-.img-top-triangle {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    margin: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 28px 28px 0 0;
-    border-color: #ff6464 transparent transparent transparent;
-    line-height: 1;
-}
-
-body {
-    color: rgba(0,0,0,0.87);
-}
-.container {
-    width: 90%;
-}
-.box {
-    border: 1px solid #eee;
-    margin: 7px 0;
-    text-align: center;
-    line-height: 50px;
-    font-size: 28px;
-    background-color: lightpink;
-    color: white;
-    padding: 0;
-    height: 400px;
-}
-.padding {
-    margin: 2px;
-}
-.icon-hover_not {
-    color: #212121;
-    font-weight: bold;
-    font-size: 14px;
-    display: block;
-    padding-top: 15px;
-    width: 100%;
-}
-.icon-hover:hover {
-    background-color: #f0f0f0;
-    height: 48px;
-}
-[type="checkbox"] + label:before, [type="checkbox"]:not(.filled-in) + label:after {
-    display: none;
-}
-.nav-search {
-    width: 30%;
-    float: right;
-    margin: 15px 100px 10px 0 !important;
-    height: 30px;
-}
-.nav-style {
-    border: none;
-    background-color: lightblue;
-    background-repeat  : no-repeat;
-    background-position: 8px center;
-    background-size    : auto 60%;
-    background-color   : #fff;
-    margin             : 0 auto;
-    padding-left       : 30px;
-    border             : 2px solid #666;
-    border-radius      : 6px;
-    color              : #555;
-    font-size          : 18px;
-    letter-spacing     : 0.1em;
-    font-weight        : bold;
-    outline            : 0;
-}
-.nav-style:focus {
-    background-color: #cfe7ff;
-}
-.nav-style::-ms-clear {
-    display: none;
-}
-header {
-    position: fixed;
-    z-index: 50;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-body {
-    background-color: #fff9ff;
-    margin-top: 100px;
-}
-.nav-left {
-    width: 450px;
-    display: block;
-    z-index: 20px;
-}
-.copy {
-    font-size: 10px;
-    float: left;
-    margin-left: 12px;
-    margin-top: -8px;
-}
-.scroll-up {
-    position: fixed;
-    bottom: 40px;
-    right: 40px;
-}
-.fadeInUp {
- -webkit-animation-fill-mode:both;
- -ms-animation-fill-mode:both;
- animation-fill-mode:both;
- -webkit-animation-duration:1s;
- -ms-animation-duration:1s;
- animation-duration:1s;
- -webkit-animation-name: fadeInUp;
- animation-name: fadeInUp;
- visibility: visible !important;
-}
-@-webkit-keyframes fadeInUp {
- 0% { opacity: 0; -webkit-transform: translateY(-20px); }
- 100% { opacity: 1; -webkit-transform: translateY(0); }
-}
-@keyframes fadeInUp {
- 0% { opacity: 0; -webkit-transform: translateY(-20px); -ms-transform: translateY(-20px); transform: translateY(-20px); }
- 100% { opacity: 1; -webkit-transform: translateY(0); -ms-transform: translateY(0); transform: translateY(0); }
-}
-.sc-pink {
-    color: #f8bbd0;
-}
-.material-header-right .material-icons {
-    color: #f48fb1;
-}
-.card-content p a {
-    font-size: 13px;
-}
-.material-icons-menu, .nav-icon {
-    color: rgba(17, 17, 17, 0.4);
-}
-.nav-discription {
-    color: rgb(17, 17, 17);
-}
-.copy-right {
-    font-size: 10px;
-}
-.flex {
-    display: flex;
-}
-.flex span {
-    align-items: center;
-}
-.height56_ {
-    height: 56px;
-}
-.nav-middle-height {
-    height: 137px;
-}
-.row {
-    margin-bottom: 0 !important;
-    margin-top: -32px;
-}
-.row .col {
-    padding: 0 !important;
-}
-.nav-section a:hover {
-    background-color: rgb(238, 238, 238);
-}
-.header-nav-section-logo {
-    -webkit-transition: background-color .3s;
-    transition: background-color .3s;
-    font-size: 1rem;
-    display: block;
-    padding: 6px 17px;
-    cursor: pointer;
-}
-.logo-precolle {
-    height: 56px;
-    margin-top: -7px;
-    margin-left: -16px;
-}
-.nav-open-padding0 {
-    padding-left: 0 !important;
-}
-.card .card-title {
-    font-size: 15px !important;
-    font-weight: bold;
-}
-.card-content p a {
-    color: rgba(76,87,102,.5);
-}
-.card-content p a:hover {
-    border-bottom: 1px solid #FF1493;
-    color: #FF1493;
-}
-
-/* nav */
-#nav-drawer {
-  position: relative;
-}
-.nav-unshown {
-  display: none;
-}
-#nav-open span, #nav-open span:before, #nav-open span:after {
-  position: absolute;
-  height: 3px;
-  width: 25px;
-  border-radius: 3px;
-  background: #555;
-  display: block;
-  content: '';
-  cursor: pointer;
-  margin-top: 15px;
-}
-#nav-open span:before {
-  bottom: -8px;
-}
-#nav-open span:after {
-  bottom: -16px;
-}
-#nav-close {
-display: none;
-position: fixed;
-z-index: 99;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background: black;
-opacity: 0;
-transition: .3s ease-in-out;
-}
-#nav-content {
-overflow: auto;
-position: fixed;
-top: 0;
-left: 0;
-z-index: 9999;
-width: 90%;
-max-width: 245px;
-height: 100%;
-background: #fff;
-transition: .3s ease-in-out;
--webkit-transform: translateX(-105%);
-transform: translateX(-105%);
-}
-#nav-content li {
-  color: #212121;
-  width: 100%;
-  align-content: center;
-  height: 40px !important;
-  line-height: 40px !important;
-}
-#nav-content a {
-  height: 32px;
-  align-content: center;
-}
-#nav-input:checked ~ #nav-close {
-display: block;
-opacity: .5;
-}
-
-#nav-input:checked ~ #nav-content {
--webkit-transform: translateX(0%);
-transform: translateX(0%);
-box-shadow: 6px 0 25px rgba(0,0,0,.15);
-}
-.nav-icon {
-  width: 20px;
-  height: 20px;
-}
-.nav-section {
-  border-bottom: 1px solid rgb(238, 238, 238);
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-.nav-wrapper #nav-content i {
-  height: 40px !important;
-  line-height: 40px !important;
-}
-
-/* header */
-.nav-input-search {
-  color: black;
-  background: #f5f5f5;
-  width: 100%;
-  height: 48px !important;
-  margin-top: 14px !important;
-}
-.label-icons {
-  color: #212121 !important;
-}
-.material-icons {
-  color: #212121;
-}
-.nav-discription {
-  font-size: 13px;
-  /* margin-left: 26px; */
-  margin-left: 47px;
-  margin-top: -41px;
-  align-content: center;
-  color: rgb(17, 17, 17);
-}
-.nav-b {
-  margin-left: 10px;
-  font-size: 24px !important;
-}
-.i-search {
-  margin-top: -16px;
-  color: #212121
-}
-nav .input-field label i {
-  color: #212121;
-}
-.material-header-middle {
-  flex: 2;
-  max-width: 500px;
-  min-width: 0px;
-  position: relative;
-  margin-left: 377px !important;
-}
-.material-header-right {
-  color: #212121;
-  margin-top: -50px;
-  float:right;
-  max-width: 216px;
-  min-width: 216px;
-  margin-left: 12px;
-  align-items: center;
-  justify-content: flex-end;
-  flex: 1;
-  height: 48px;
-  position: relative;
-  display: flex;
-}
-.material-header-right .material-icons {
-  margin-right: 30px;
-  cursor: pointer;
-}
-.card-action a {
-    margin: 0 !important;
-    font-size: 13px;
-    color: rgba(76, 87, 102, 0.5) !important;
-}
-.card-action a:hover {
-    color: #f06292 !important;
-    border-bottom: 1px solid #f06292;
-}
-.card-content p {
-    font-size: 15.5px;
-    color: black !important;
-}
-.card-action {
-    transition: 0s !important;
-}
-.card-margin {
-    margin: 0 5px 0 10px !important;
-}
-.card.medium {
-    height: 370px !important;
-}
-.search-icon {
-    margin-top: 10px;
-    color: #212121 !important;
-}
-
-/* placeholeder */
-input::-webkit-input-placeholder {
-  font-size: 13px;
-}
-input:-moz-placeholder {
-  color: red;
-}
-input::-moz-placeholder {
-  color: red;
-}
-input:-ms-input-placeholder {
-  color: red;
-}
-
-/* footer */
-.fa-arrow-circle-up:hover {
-    color: #f5ccda;
-}
-.footer-padding {
-    padding-left: 16px;
-    padding-bottom: 7px;
-}
-.page-footer {
-    padding-top: 5px !important;
+body, html {
+    font-family: 'Abel', sans-serif;
+    color: #846c63;
 }
