--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -25,7 +25,7 @@
             <div class="col s12">
                 <div class="section">
                     <div class="col s12">
-                        <span class="title">Recently Added</span>
+                        <span class="title">NEW ARRIVAL ARTICLE</span>
                     </div>
                     <div class="col s12 m6 l4">
 
