--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -57,7 +57,34 @@
     <nav class="white" role="navigation">
         <div class="container">
             <div class="nav-wrapper">
+                <a href="#!" class="brand-logo"><%= image_tag 'title_logo.png', :alt => 'プリコレ！', :class => "title_img" %></a>                
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <ul class="right hide-on-med-and-down">
+                    <li>
+                        <%= link_to purecolle_path do %>
+                            ホーム
+                        <% end %>
+                    </li>
+                    <li>
+                        <%= link_to purecolle_about_path do %>
+                            このサイトについて
+                        <% end %>
+                    </li>
+                    <li>
+                        <%= link_to purecolle_contact_path do %>
+                            お問い合わせ
+                        <% end %>
+                    </li>                    
+                </ul>
             </div>
         </div>
     </nav>
+
+    <ul class="sidenav" id="mobile-demo">
+        <li><a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a></li>
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">Javascript</a></li>
+        <li><a href="mobile.html">Mobile</a></li>
+    </ul>
 </div>
