--- a/app/views/shared/_scroll.html.erb
+++ b/app/views/shared/_scroll.html.erb
@@ -1,3 +1,5 @@
-<div class="scroll-up hidden_scroll">
-  <a href="#"><i class="fas fa-arrow-circle-up fa-4x sc-pink"></i></a>
+<div class="scroll-up fixed-action-btn hide-on-med-and-down" style="bottom: 75px; right: 60px;">
+  <a href="#" class="btn-floating btn-large pink accent-1">
+    <i class="Medium material-icons">arrow_upward</i>
+  </a>
 </div>
