--- a/app/assets/stylesheets/purecolle.scss
+++ b/app/assets/stylesheets/purecolle.scss
@@ -1,8 +1,16 @@
 @charset "UTF-8";
 
-body, html {
-    // font-family: 'Abel', sans-serif;
-    font-family: 游ゴシック体, 'Yu Gothic', YuGothic, 'ヒラギノ角ゴシック Pro', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, Osaka, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
+@media only screen and (max-width: 601px){
+    .row .col.m6 {
+        width: 50% !important;
+        margin-left: auto;
+        left: auto;
+        right: auto;
+    }
+}
+
+body, html {    
+    font-family: 'Sawarabi Gothic', 'ヒラギノ角ゴシック Pro', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, Osaka, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
     color: #846c63;
 }
 body {
@@ -10,7 +18,6 @@ body {
 }
 
 nav ul li a {
-    font-weight: bold;
     color: lightpink;
 }
 nav ul li a:hover {
@@ -24,11 +31,11 @@ nav ul li a:hover {
 .card .card-action {
     padding: 16px 5px !important;
 }
-.card .card-action > a {
-    color: #bcaaa4;
+.card .card-action a {
+    color: #bcaaa4 !important;
 }
 .brand-logo {
-    margin-top: 3px;
+    margin-top: 4px;
 }
 .material-icons {
     color: black;
