--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,18 +49,20 @@
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="description" content="プリコレ！はプリキュアのまとめサイトアンテナです。各まとめサイトのプリキュアに関する記事を閲覧できます。"/>
-    <meta name="keywords" content="プリキュア,プリキュアまとめ,はぐぷり,precure,ぷりこれ,precolle">
+    <meta name="keywords" content="プリキュア,プリキュアまとめ,ハグプリ,はぐぷり,precure,ぷりこれ,precolle">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= favicon_link_tag %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <!-- google web font -->
+    <link href="https://fonts.googleapis.com/earlyaccess/sawarabigothic.css" rel="stylesheet" />
+    <%= favicon_link_tag %>
   </head>
 
   <body>
