--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -62,17 +62,17 @@
                 <ul class="right hide-on-med-and-down">
                     <li>
                         <%= link_to purecolle_path do %>
-                            ホーム
+                            Home
                         <% end %>
                     </li>
                     <li>
                         <%= link_to purecolle_about_path do %>
-                            このサイトについて
+                            About
                         <% end %>
                     </li>
                     <li>
                         <%= link_to purecolle_contact_path do %>
-                            お問い合わせ
+                            Contact
                         <% end %>
                     </li>                    
                 </ul>
