--- a/app/views/purecolle/about.html.erb
+++ b/app/views/purecolle/about.html.erb
@@ -33,7 +33,7 @@
     </div>
     <div class="row">
       <div class="col s12">
-        This is an inline input field:
+        input field
         <div class="input-field inline">
           <input id="email" type="email" class="validate">
           <label for="email" data-error="wrong" data-success="right">Email</label>
