--- a/app/views/purecolle/about.html.erb
+++ b/app/views/purecolle/about.html.erb
@@ -6,11 +6,11 @@
     <div class="row">
       <div class="input-field col s5">
         <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-        <label for="first_name">First Name</label>
+        <label for="first_name">ミョウジ</label>
       </div>
       <div class="input-field col s5">
         <input id="last_name" type="text" class="validate">
-        <label for="last_name">Last Name</label>
+        <label for="last_name">ナマエ</label>
       </div>
     </div>
     <div class="row">
