--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <title>プリコレ！｜プリキュアまとめサイトアンテナ</title>
+    <title>プリコレ！ | プリキュアまとめサイトアンテナ</title>
     <%= csrf_meta_tags %>
 
     <meta charset="utf-8">
